chapter16-144: byte[], String 대신 CLOB, BLOB 타입으로 매핑
* BLOB/CLOB으로 매핑하여 데이터 스트리밍과 같은 JDBC 드라이버 최적화를 유지